# HeatConductivity

./: CMakeLists.txt  README.md  function.h  main.cpp  matrix.h  mpi_main.cpp  mpi_main.h  read_configs.cpp
headers/: matrix.h  read_configs.h
imagesDoNotDelete/: explain.txt
sources/: main.cpp  mpi_main.cpp  read_configs.cpp
txt/: configs.txt  matrix.txt  matrix2.txt  sc.py
